use CMS garbage collection and latest (3.2.1) JME